Task 5: Events, Sessions

--- a/app/leaderboard.html
+++ b/app/leaderboard.html
@@ -4,4 +4,15 @@
 </head>
 <body>
 
+<h1>Leaderboard</h1>
+{{> leaderboard}}
 </body>
+
+<template name="leaderboard">
+  <ul>
+    {{#each player}}
+    <li class="player {{selectedClass}}">{{name}}: {{score}}</li>
+    {{/each}}
+  </ul>
+  {{otherHelperFunction}}
+</template>
