--- a/app/leaderboard.html
+++ b/app/leaderboard.html
@@ -3,16 +3,38 @@
   <title>Leaderboard</title>
 </head>
 <body>
-
 <h1>Leaderboard</h1>
+
+{{> loginButtons}}
 {{> leaderboard}}
 </body>
 
 <template name="leaderboard">
+  {{#if currentUser}}
+  {{> addPlayerForm}}
   <ul>
     {{#each player}}
     <li class="player {{selectedClass}}">{{name}}: {{score}}</li>
     {{/each}}
+    {{otherHelperFunction}}
+
+    {{#if selectedPlayer}}
+    <li>Selected Player: {{selectedPlayer.name}}</li>
+    <li>
+      <button class="increment">Give 5 Points</button>
+      <button class="decrement">Take 5 Points</button>
+      <button class="remove">Remove Player</button>
+    </li>
+    {{/if}}
   </ul>
-  {{otherHelperFunction}}
+  {{else}}
+    <p>You must be logged-in to see this content.</p>
+  {{/if}}
+</template>
+
+<template name="addPlayerForm">
+  <form>
+    <input type="text" name="playerName">
+    <input type="submit" value="Add Player">
+  </form>
 </template>
